--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     volumes:
       - .:/app
       - ./tmp/bundle:/bundle
-    command: bash -c "rm -f tmp/pids/server.pid && bin/rails tailwindcss:watch && rails server -b '0.0.0.0'"
+    command: bin/docker.dev
     ports:
       - "3000:3000"
     environment:
@@ -21,3 +21,5 @@ services:
       BUNDLE_PATH:  /bundle
     depends_on:
       - db
+    # tty: true
+    stdin_open: true
